--- a/tableaux.html
+++ b/tableaux.html
@@ -116,6 +116,26 @@
 
     /* 6. Réalisez un programme qui enlève tous les items présents plus d’une fois et les remplacent par “Modifié”*/
 
+    //------------------------------------------
+    // Ma version (Cyril):
+    
+    const tableau = [1, 2, 5, 9, 2, 8, 5, 2];
+    console.log(tableau);
+    for (let i = 0; i < tableau.length; i++)
+    {
+        let comparateur = tableau[i];
+        for (let j = (i + 1); j < tableau.length; j++)
+        {
+            if (comparateur == tableau[j])
+            {
+                tableau[i] = "Modifié";
+                tableau[j] = "Modifié";
+            }
+        }
+    }
+    console.log(tableau);
+    
+    //------------------------------------------
     let myArray = [5, 3, 8, 2, 5, 8, 9];
     let duplicates = [];
     console.log('Technique 1, Array de départ', myArray);
